# Oware

./: .gitignore  CMakeLists.txt  flake.nix
benchmark/: Watch.cpp  Watch.hpp  benchmark.cpp
include/: GameLogic.hpp  GameState.hpp  Oware.hpp  TermCol.hpp
src/: GameLogic.cpp  GameState.cpp  Oware.cpp  main.cpp
test/: test.cpp  test.hpp
